--- a/views/end.ejs
+++ b/views/end.ejs
@@ -9,10 +9,10 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bad--end">
     <div class="game--box start--box">
-        <h1 class="game--title">A GAME</h1>
-        <a href="/start" class="start--btn">Start Game</a>
+        <h1 class="game--title">YOU DIED</h1>
+        <a href="/start" class="start--btn">TRY AGAIN</a>
     </div>
     <br>
 </body>
