--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body{
 h2{
     
     padding: 1rem 1.5rem;
-    background-color: white;
+    background-color: rgba(235, 235, 235, 0.877);
     width: 60%;
     border-radius: 10px;
     color: rgb(22, 22, 22);
