--- a/views/title.ejs
+++ b/views/title.ejs
@@ -11,7 +11,8 @@
 
 <body>
     <div class="game--box start--box">
-        <h1 class="game--title">A GAME</h1>
+        <h1 class="game--title">A GAME FOR <%= my_user %>
+        </h1>
         <a href="/start" class="start--btn">Start Game</a>
     </div>
     <br>
