--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,15 +12,18 @@
 <body>
     - <form action="/login" method="POST" class="game--box">
         <h2>Log In</h2>
-        <p>Username</p>
-        - <input type="text" name="username" placeholder="What is your username?" />
-        <p>Password</p>
-        - <input type='password' name='password' placeholder="What is your password?"" />
+        <% if(invalid_user){ %>
+            <p class='invalid'>INVALID USER : TRY AGAIN</p>
+            <% } %>
+                <p>Username</p>
+                - <input type="text" name="username" placeholder="What is your username?" />
+                <p>Password</p>
+                - <input type='password' name='password' placeholder="What is your password?"" />
             - <input type='submit' value='Login!' />
         <br>
         <br>   
+        <a href=" /sgnup">sign up!</a>
     </form>
-    <a href=" /sgnup">sign up!</a>
 </body>
 
 </html>
